external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/on_dot_autocomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W10007]: issue with attribute value
  ┌─ tests/move_2024/ide_mode/on_dot_autocomplete.move:1:9
  │
1 │ #[allow(ide_path_autocomplete)]
  │         ^^^^^^^^^^^^^^^^^^^^^ Unknown warning filter 'ide_path_autocomplete'

error[E04023]: invalid method call
   ┌─ tests/move_2024/ide_mode/on_dot_autocomplete.move:23:9
   │
23 │         c.b.a.b();        // unresolved method name
   │         ^^^^^^^^^
   │         │     │
   │         │     No local 'use fun' alias was found for 'a::m::A.b', and no function 'b' was found in the defining module 'a::m'
   │         Invalid method call. No known method 'b' on type 'a::m::A'
